# test-malloc-fail

./: meson.build  run_command.sh  test_malloc_fail.c
